# ipm.ipak

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO-TASK.md  build.rs  hello-dotnet-1.0.0.ipak
.github/workflows/: rust.yml
lib/src/: README.md
scripts/: preconfigure.sh
scripts/configure/: check.sh  prepare.sh
src/: lib.rs  main.rs  modules.rs  prelude.rs  utils.rs
src/modules/: messages.rs  messages.rs.disabled  pkg.rs  project.rs  system.rs  utils.rs  version.rs
src/modules/messages/: manual.md
src/modules/messages/help/: help.md  main.md  manual.md  package.md  project.md  system.md  utils.md  version.md
src/modules/pkg/: configure.rs  depend.rs  install.rs  list.rs  lock.rs  metadata.rs  purge.rs  remove.rs
src/modules/pkg/depend/: error.rs  graph.rs  tests.rs  utils.rs
src/modules/project/: build.rs  configure.rs  create.rs  init.rs  install.rs  metadata.rs  package.rs  purge.rs  remove.rs  run.rs
src/modules/project/create/: templates.rs
src/modules/project/create/templates/clang/: CMakeLists.txt
src/modules/project/create/templates/clang/ipak/: project-ignore.yaml
src/modules/project/create/templates/clang/ipak/scripts/: build.sh  install.sh  remove.sh
src/modules/project/create/templates/dotnet/ipak/: project-ignore.yaml
src/modules/project/create/templates/dotnet/ipak/scripts/: build.sh  install.sh  purge.sh  remove.sh
src/modules/project/create/templates/python/: pyproject.toml
src/modules/project/create/templates/python/ipak/: project-ignore.yaml
src/modules/project/create/templates/python/ipak/scripts/: build.sh  install.sh
src/modules/project/create/templates/python/src/: __main__.py
src/modules/project/create/templates/rust/ipak/scripts/: build.sh  exec.sh  install.sh  purge.sh
src/modules/system/: configure.rs  path.rs
src/modules/system/configure/: global.rs  local.rs
src/modules/system/configure/data/global/: README.md
src/modules/system/configure/data/local/: README.md
src/modules/system/path/: global.rs  local.rs
src/utils/: archive.rs  args.rs  color.rs  debug.rs  error.rs  files.rs  shell.rs  version.rs
src/utils/color/: colorize.rs
src/utils/shell/: question.rs
templates/hello-cpp/: CMakeLists.txt
templates/hello-cpp/ipak/: project.yaml
templates/hello-cpp/ipak/scripts/: install.sh
templates/hello-cs/ipak/: project.yaml
templates/hello-cs/ipak/scripts/: install.sh  remove.sh
templates/hello-py/: __main__.spec  pyproject.toml
templates/hello-py/hello_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
templates/hello-py/ipak/: project.yaml
templates/hello-py/ipak/scripts/: build.sh  install.sh
templates/hello-rust/ipak/: project.yaml
