[package]
name = "ipak"
version = "2.0.0"
edition = "2024"

[dependencies]
ar = "0.9.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
dialoguer = "0.11.0"
env_logger = "0.11.8"
file-format = "0.27.0"
flate2 = "1.1.2"
ignore = "0.4.23"
log = "0.4.27"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tar = "0.4.44"
tempdir = "0.3.7"
tempfile = "3.20.0"
termimad = "0.33.0"
thiserror = "2.0.12"
toml = "0.8.22"
walkdir = "2.5.0"
xz2 = "0.1.7"
zip = { version = "4.0.0", default-features = false, features = ["deflate"] }
zstd = "0.13.3"
